--- a/src/components/key/key.scss
+++ b/src/components/key/key.scss
@@ -7,6 +7,9 @@ $whiteHeight: 250px;
   outline: none;
   border: none;
   cursor: pointer;
+  position: relative;
+  font-size: 18px;
+  font-weight: bold;
 
   &_type {
     &_white {
@@ -18,6 +21,7 @@ $whiteHeight: 250px;
       box-shadow:
               inset 2px 0 1px rgba(255, 255, 255, 0.5),
               inset -2px -2px 1px rgba(133, 121, 107, 0.5);
+      color: rgba(0, 0, 0, 0.3);
     }
     &_black {
       width: calc(#{$whiteWidth} * 0.65);
@@ -31,6 +35,15 @@ $whiteHeight: 250px;
               inset 3px -15px 1px rgba(255, 255, 255, 0.2),
               inset -3px 0 1px rgba(0, 0, 0, 0.5),
               inset -2px -2px 1px rgba(0, 0, 0, 0.5);
+      color: rgba(255, 255, 255, 0.3);
+      z-index: 1;
     }
+  }
+
+  &__label {
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
