--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -4,3 +4,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "AdineKirnberg";
+  src: url("../fonts/Adine_Kirnberg.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
