--- a/src/components/key/key.scss
+++ b/src/components/key/key.scss
@@ -16,7 +16,7 @@ $whiteHeight: 250px;
       width: $whiteWidth;
       height: $whiteHeight;
       background-color: $pianoLight;
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(133, 121, 107, 0.0) 50%);
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.0) 50%);
       border-radius: 0 0 6px 6px;
       box-shadow:
               inset 2px 0 1px rgba(255, 255, 255, 0.5),
@@ -27,17 +27,22 @@ $whiteHeight: 250px;
       width: calc(#{$whiteWidth} * 0.65);
       height: calc(#{$whiteHeight} * 0.55);
       background-color: $pianoDark;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.0) 50%);
       position: absolute;
       top: 0;
       transform: translateX(-50%);
       border-radius: 0 0 4px 4px;
       box-shadow:
               inset 3px -15px 1px rgba(255, 255, 255, 0.2),
-              inset -3px 0 1px rgba(0, 0, 0, 0.5),
-              inset -2px -2px 1px rgba(0, 0, 0, 0.5);
+              inset -3px 0 1px rgba(0, 0, 0, 0.2),
+              0 0 8px rgba(0, 0, 0, 0.5);
       color: rgba(255, 255, 255, 0.3);
       z-index: 1;
     }
+  }
+
+  &_active {
+    background-color: #00b5a4;
   }
 
   &__label {
