--- a/src/components/key/key.scss
+++ b/src/components/key/key.scss
@@ -10,6 +10,7 @@ $whiteHeight: 250px;
   position: relative;
   font-size: 18px;
   font-weight: bold;
+  transition: background-color 0.1s;
 
   &_type {
     &_white {
@@ -19,9 +20,13 @@ $whiteHeight: 250px;
       background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.0) 50%);
       border-radius: 0 0 6px 6px;
       box-shadow:
-              inset 2px 0 1px rgba(255, 255, 255, 0.5),
-              inset -2px -2px 1px rgba(133, 121, 107, 0.5);
+              inset 2px 0 1px rgba(255, 255, 255, 0.3),
+              inset -2px -2px 1px rgba(0, 0, 0, 0.3);
       color: rgba(0, 0, 0, 0.3);
+
+      &:hover {
+        background-color: darken($pianoLight, 10%);
+      }
     }
     &_black {
       width: calc(#{$whiteWidth} * 0.65);
@@ -38,11 +43,15 @@ $whiteHeight: 250px;
               0 0 8px rgba(0, 0, 0, 0.5);
       color: rgba(255, 255, 255, 0.3);
       z-index: 1;
+
+      &:hover {
+        background-color: lighten($pianoDark, 10%);
+      }
     }
   }
 
-  &_active {
-    background-color: #00b5a4;
+  &_active, &_active:hover {
+    background-color: #be7451;
   }
 
   &__label {
